--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul class="menu list">
             <li class="menu-item menu-item-erst">
               <a
-                class="menu-gap link main-link main-navi-link"
+                class="menu-gap link link-studio main-navi-link"
                 href="./index.html"
                 >Studio</a
               >
@@ -132,8 +132,8 @@
       <section class="section-three-main">
         <div class="container container-three">
           <h2 class="title-two">Our Team</h2>
-          <ul class="menu-list menu-item-shadow list">
-            <li class="menu-item menu-item-border">
+          <ul class="menu-list list">
+            <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
                 src="./images/mark.jpg"
@@ -183,7 +183,7 @@
                 </ul>
               </div>
             </li>
-            <li class="menu-item menu-item-border">
+            <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
                 src="./images/tom.jpg"
@@ -233,7 +233,7 @@
                 </ul>
               </div>
             </li>
-            <li class="menu-item menu-item-border">
+            <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
                 src="./images/camila.jpg"
@@ -283,7 +283,7 @@
                 </ul>
               </div>
             </li>
-            <li class="menu-item menu-item-border">
+            <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
                 src="./images/daniel.jpg"
