--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <svg width="64" height="64" class="benefits-social-icon">
-                  <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="three-title">Strategy</h3>
@@ -92,7 +92,7 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <svg width="64" height="64" class="benefits-social-icon">
-                  <use href="./images/icons/sprite.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="three-title">Punctuality</h3>
@@ -104,7 +104,7 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <svg width="64" height="64" class="benefits-social-icon">
-                  <use href="./images/icons/sprite.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="three-title">Diligence</h3>
@@ -116,7 +116,7 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <svg width="64" height="64" class="benefits-social-icon">
-                  <use href="./images/icons/sprite.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="three-title">Technologies</h3>
@@ -136,7 +136,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/icons/images/mark.jpg"
+                src="./images/team/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -149,32 +149,28 @@
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                        <use href="./images/icons.svg#icon-Group"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -184,7 +180,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/icons/images/tom.jpg"
+                src="./images/team/tom.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -197,34 +193,28 @@
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                        <use href="./images/icons.svg#icon-Group"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -234,7 +224,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/icons/images/camila.jpg"
+                src="./images//team/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -247,34 +237,28 @@
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                        <use href="./images/icons.svg#icon-Group"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -284,7 +268,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/icons/images/daniel.jpg"
+                src="./images/team/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -297,34 +281,28 @@
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                        <use href="./images/icons.svg#icon-Group"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -344,7 +322,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/bankingapp.jpg"
+                  src="./images/portfolio/bankingapp.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -364,7 +342,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/cashlesspayment.jpg"
+                  src="./images/portfolio/cashlesspayment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -385,7 +363,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/maditationapp.jpg"
+                  src="./images/portfolio/maditationapp.jpg"
                   alt="Maditation App"
                   width="360"
                   height="300"
@@ -406,7 +384,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/taxiservice.jpg"
+                  src="./images/portfolio/taxiservice.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -427,7 +405,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/screenillustration.jpg"
+                  src="./images/portfolio/screenillustration.jpg"
                   alt="Screen Illustration"
                   width="360"
                   height="300"
@@ -448,7 +426,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/icons/images/onlinecourses.jpg"
+                  src="./images/portfolio/onlinecourses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
@@ -488,28 +466,28 @@
             <li class="social-list-item">
               <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
-                  <use href="./images/icons/sprite.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
-                  <use href="./images/icons/sprite.svg#icon-Group"></use>
+                  <use href="./images/icons.svg#icon-Group"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
-                  <use href="./images/icons/sprite.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
-                  <use href="./images/icons/sprite.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
